<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/str1"
        android:textSize="70sp"
        android:gravity="right"
        android:background="@color/colorGray"
        />
    <Button
        android:id="@+id/button1"
        android:text="@string/str1"
        android:textSize="70sp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textField"
        />
    <Button
        android:id="@+id/button2"
        android:text="@string/str2"
        android:textSize="70sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textField"
        android:layout_toRightOf="@id/button1"
        />
    <Button
        android:id="@+id/button3"
        android:text="@string/str3"
        android:textSize="70sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textField"
        android:layout_toRightOf="@id/button2"
        />
    <Button
        android:id="@+id/button4"
        android:text="@string/str4"
        android:textSize="70sp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        />
    <Button
        android:id="@+id/button5"
        android:text="@string/str5"
        android:textSize="70sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toRightOf="@id/button4"
        />
    <Button
        android:id="@+id/button6"
        android:text="@string/str6"
        android:textSize="70sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toRightOf="@id/button5"
        />
    <Button
        android:id="@+id/button7"
        android:text="@string/str7"
        android:textSize="70sp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        />
    <Button
        android:id="@+id/button8"
        android:text="@string/str8"
        android:textSize="70sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_toRightOf="@id/button7"
        />
    <Button
        android:id="@+id/button9"
        android:text="@string/str9"
        android:textSize="70sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_toRightOf="@id/button8"
        />
    <Button
        android:id="@+id/button0"
        android:text="@string/str0"
        android:textSize="70sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_toRightOf="@id/buttonEven"
        />
    <Button
        android:id="@+id/buttonEven"
        android:text="@string/strEven"
        android:textSize="70sp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        />
    <Button
        android:id="@+id/buttonC"
        android:text="@string/strC"
        android:textSize="70sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button9"
        android:layout_toRightOf="@id/button0"
        />





</RelativeLayout>